# pyshocks

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REUSE.toml  justfile  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements-git.txt  requirements.txt  setup.cfg  setup.py
.ci/: requirements-build.txt  requirements-dev.txt  requirements-test.txt
.github/: requirements-build.txt  requirements-dev.txt
.github/workflows/: ci.yml
.reuse/: dep5
LICENSES/: MIT.txt
docs/: conf.py  equations.rst  index.rst  justfile  misc.rst  references.rst  schemes.rst  timestepping.rst  tutorial.rst
drivers/: advection-adjoint.py  burgers-adjoint.py
examples/: advection-adjoint.py  advection-esweno-conservation.py  advection-sbp-sat.py  advection-splitting.py  advection.py  burgers-adjoint.py  burgers-sbp-numpy.py  burgers-splitting.py  burgers-ssweno-numpy.py  burgers-ssweno-periodic-numpy.py  burgers.py  diffusion-sbp-sat.py  example-autodiff.py  traffic-flow-model.py
pyshocks/: __init__.py  adjoint.py  checkpointing.py  convolve.py  finitedifference.py  funcs.py  grid.py  limiters.py  logging.py  reconstruction.py  sbp.py  scalar.py  schemes.py  sparse.py  timestepping.py  tools.py  weno.py
pyshocks/advection/: __init__.py  schemes.py
pyshocks/burgers/: __init__.py  schemes.py  ssweno.py
pyshocks/continuity/: __init__.py  schemes.py
pyshocks/diffusion/: __init__.py  schemes.py
scribbles/: preamble.tex  ss-weno.tex
src/pyshocks/: __init__.py  checkpointing.py  convolve.py  finitedifference.py  funcs.py  grid.py  limiters.py  logging.py  reconstruction.py  sbp.py  scalar.py  schemes.py  timestepping.py  tools.py  weno.py
src/pyshocks/advection/: __init__.py  schemes.py
src/pyshocks/burgers/: __init__.py  schemes.py  ssweno.py
src/pyshocks/continuity/: __init__.py  schemes.py
src/pyshocks/diffusion/: __init__.py  schemes.py
tests/: test_convergence.py  test_finite_difference.py  test_muscl.py  test_sbp.py  test_timestepping.py  test_utils.py  test_weno.py
