[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=62",
    "wheel",
]

[project]
name = "pyshocks"
version = "2023.1"
description = "Adjoint-based optimization of flows with shocks"
readme = "README.rst"
keywords = [
    "jax",
    "optimization",
    "shocks",
    "weno",
]
license = { text = "MIT" }
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
authors = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "jax>=0.4.1",
    "jaxlib>=0.4.1",
    "numpy>=1.19",
    "rich",
    'typing-extensions; python_version < "3.10"',
]
[project.optional-dependencies]
dev = [
    "check-manifest",
    "codespell",
    "doc8",
    "mypy",
    "pip-tools",
    "pyproject-fmt",
    "pytest",
    "reuse",
    "ruff",
    "types-dataclasses",
]
docs = [
    "sphinx>=6",
    "sphinx-book-theme",
]
pyweno = [
    "PyWENO@ git+https://github.com/memmett/PyWENO.git#egg=PyWENO",
    "sympy",
]
vis = [
    "matplotlib",
    "SciencePlots",
]
[project.urls]
Documentation = "https://pyshocks.readthedocs.io"
Repository = "https://github.com/alexfikl/pyshocks"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.ruff]
preview = true
target-version = "py38"
line-length = 88
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # flake8
    "F",        # flake8
    "FBT",      # flake8-boolean-trap
    "G",        # flake8-logging-format
    "I",        # flake8-isort
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RUF",      # ruff
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # flake8
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "ISC001",   # single-line-implicit-string-concatenation
    "N803",     # invalid-argument-name
    "N806",     # non-lowercase-variable-in-function
    "PLC0415",  # import-outside-top-level
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional
    "PLR2004",  # magic-value-comparison
    "S101",     # assert
    "S102",     # exec-builtin
    "S301",     # suspicious-pickle-usage
    "SIM108",   # use-ternary-operator
    "UP037",    # quoted-annotation
]

[tool.ruff.lint.per-file-ignores]
"pyshocks/__init__.py" = ["FBT003"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pyshocks"]

[tool.check-manifest]
ignore = [
    "*.yml",
    "*.yaml",
    ".ci/*",
]

[tool.mypy]
strict = true
hide_error_codes = false
warn_unused_ignores = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "cloudpickle.*",
    "matplotlib.*",
    "pyweno.*",
    "seaborn.*",
    "scienceplots.*",
    "scipy.*",
    "jaxlib.cpu.*",
]
ignore_missing_imports = true

[tool.doc8]
max-line-length = 88
ignore-path = "docs/_build"
