[metadata]
name = pyshocks
version = 2022.7
description = Adjoint-based optimization of flows with shocks
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexfikl/pyshocks
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = MIT
license_file = LICENSES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    jax
    optimization
    shocks
    weno

[options]
packages = find:
install_requires =
    jax
    jaxlib
    numpy>=1.19
    typing-extensions;python_version<'3.10'
python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
dev =
    codespell
    doc8
    flake8
    flake8-bugbear
    flake8-comprehensions
    flake8-isort
    flake8-quotes
    mypy
    pep8-naming
    pip-tools
    pylint
    pytest
    rich
    sphinx-lint
    types-dataclasses
pyweno =
    PyWENO@git+https://github.com/memmett/PyWENO.git#egg=PyWENO
    sympy
vis =
    SciencePlots
    matplotlib

[doc8]
max-line-length = 88
ignore-path = docs/_build

[flake8]
ignore =
    RST,
    E123,
    E124,
    E126,
    E127,
    E128,
    E203,
    E226,
    E402,
    W503,
    D102,
    D103,
    N803,
    N806
max-line-length = 88
inline-quotes = double
multiline-quotes = double

[pylint.master]
jobs = 4
ignored-modules = matplotlib

[pylint.messages_control]
enable =
    I0021                   # useless-suppression
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0209,                  # consider-using-f-string
    C0301,                  # line-too-long
    C0302,                  # too-many-lines
    C0411,                  # wrong-import-order
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0901,                  # too-many-ancestors
    R0902,                  # too-many-instance-attributes
    R0903,                  # too-few-public-methods
    R0912,                  # too-many-branches
    R0913,                  # too-many-arguments
    R0914,                  # too-many-locals
    R0915,                  # too-many-statements
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611,                  # unused-import
    W0612,                  # unused-variable
    W0613                   # unused-argument

[mypy]
warn_unused_ignores = False
plugins = numpy.typing.mypy_plugin

[mypy-cloudpickle.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pyweno.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-scienceplots.*]
ignore_missing_imports = True

[mypy-SciencePlots.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-jaxlib.cpu.*]
ignore_missing_imports = True
