[metadata]
name = pyshocks
version = 2022.7
description = Adjoint-based optimization of flows with shocks
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexfikl/pyshocks
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = MIT
license_file = LICENSES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    jax
    optimization
    shocks
    weno

[options]
packages = find:
install_requires =
    jax
    jaxlib
    matplotlib
    numpy>=1.19
    rich
    typing-extensions;python_version<'3.10'
python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
dev =
    codespell
    doc8
    mypy
    pip-tools
    pytest
    sphinx-lint
    types-dataclasses
pyweno =
    PyWENO@git+https://github.com/memmett/PyWENO.git#egg=PyWENO
    sympy
vis =
    SciencePlots

[doc8]
max-line-length = 88
ignore-path = docs/_build

[mypy]
warn_unused_ignores = True
plugins = numpy.typing.mypy_plugin

[mypy-cloudpickle.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pyweno.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-scienceplots.*]
ignore_missing_imports = True

[mypy-SciencePlots.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-jaxlib.cpu.*]
ignore_missing_imports = True
